--- a/RemoteChecker/Views/Person/Delete.cshtml
+++ b/RemoteChecker/Views/Person/Delete.cshtml
@@ -4,19 +4,13 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Удаление пользователя</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Действительно хотите грохнуть этого пользователя?</h3>
 <div>
-    <h4>Person</h4>
+    <h4>Логин: @Html.DisplayFor(model => model.Login)</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Login)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Login)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Password)
         </dt>
@@ -33,7 +27,10 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Details" asp-route-id="@Model.ID">Посмотреть информацию</a>
+        <br />
+        <a asp-action="Index">Назад к списку пользователей</a>
+        <hr />
+        <input type="submit" value="Удалить" class="btn btn-danger" />
     </form>
 </div>
