--- a/RemoteChecker/Views/Person/Details.cshtml
+++ b/RemoteChecker/Views/Person/Details.cshtml
@@ -4,33 +4,19 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Информация о пользователе</h1>
 
 <div>
-    <h4>Person</h4>
+    <h4>Логин: @Html.DisplayFor(model => model.Login)</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Login)
+            228 задач
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Login)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Password)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Password)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Role)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Role)
-        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Delete" asp-route-id="@Model.ID">Удалить пользователя</a>
+    <br/>
+    <a asp-action="Index">Назад к списку пользователей</a>
 </div>
