Added authorization and authentication for everyone
Also now supports registration

Related to #6

--- a/RemoteChecker/Views/Person/Index.cshtml
+++ b/RemoteChecker/Views/Person/Index.cshtml
@@ -13,24 +13,25 @@
                 Логин
             </th>
             <th>
-                Тут будет количество задач
+                Тут будет количество чекеров
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Login)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Role)
-            </td>
-            <td>
-                <a asp-action="Details" asp-route-id="@item.ID">Информация</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Login)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Role)
+                </td>
+                <td>
+                    <a asp-action="Details" asp-route-id="@item.ID">Информация</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
