--- a/RemoteChecker/Views/Account/Login.cshtml
+++ b/RemoteChecker/Views/Account/Login.cshtml
@@ -9,20 +9,19 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
-            <div class="validation" asp-validation-summary="ModelOnly"></div>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Login">Введите логин</label><br />
-                <input type="text" asp-for="Login" />
-                <span asp-validation-for="Login" class="text-danger" />
+                <label class="control-label">Логин</label>
+                <input asp-for="Login" class="form-control" />
+                <span asp-validation-for="Login" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Password">Введите пароль</label><br />
-                <input asp-for="Password" />
-                <span asp-validation-for="Password" class="text-danger" />
+                <label class="control-label">Пароль</label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <hr />
             <div class="form-group">
-                <input type="submit" value="Войти" class="btn btn-outline-dark" />
+                <input type="submit" value="Добавить" class="btn btn-primary" />
             </div>
         </form>
     </div>
