--- a/RemoteChecker/Views/Account/Register.cshtml
+++ b/RemoteChecker/Views/Account/Register.cshtml
@@ -9,21 +9,21 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Register" asp-controller="Account" asp-anti-forgery="true">
-            <div class="validation" asp-validation-summary="ModelOnly"></div>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Login">Введите логин</label><br />
-                <input type="text" asp-for="Login" />
-                <span asp-validation-for="Login" class="text-danger" />
+                <label class="control-label">Логин</label>
+                <input asp-for="Login" class="form-control" />
+                <span asp-validation-for="Login" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Password">Введите пароль</label><br />
-                <input asp-for="Password" />
+                <label class="control-label">Пароль</label>
+                <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ConfirmPassword">Повторите пароль</label><br />
-                <input asp-for="ConfirmPassword" />
-                <span asp-validation-for="ConfirmPassword" />
+                <label class="control-label">Повторите пароль</label>
+                <input asp-for="ConfirmPassword" class="form-control" />
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <hr />
             <div class="form-group">
