--- a/RemoteChecker/Views/Person/Index.cshtml
+++ b/RemoteChecker/Views/Person/Index.cshtml
@@ -26,7 +26,7 @@
                     @Html.DisplayFor(modelItem => item.Login)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Role)
+                    @Html.DisplayFor(modelItem => item.Role.Name)
                 </td>
                 <td>
                     <a asp-action="Details" asp-route-id="@item.ID">Информация</a>
