--- a/RemoteChecker/Views/Shared/_Layout.cshtml
+++ b/RemoteChecker/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Person" asp-action="Index">Пользователи</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="CheckRequests" asp-action="Index">Чекеры</a>
+                            </li>
                         }
                     </ul>
                 </div>
