--- a/RemoteChecker/Views/Account/Login.cshtml
+++ b/RemoteChecker/Views/Account/Login.cshtml
@@ -21,7 +21,7 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Добавить" class="btn btn-primary" />
+                <input type="submit" value="Войти в систему" class="btn btn-primary" />
             </div>
         </form>
     </div>
