--- a/RemoteChecker/Views/CheckRequests/Create.cshtml
+++ b/RemoteChecker/Views/CheckRequests/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model RemoteChecker.Models.CheckRequest
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Создание чекера";
+
 }
 
-<h1>Create</h1>
+<h1>Создание чекера</h1>
 
-<h4>CheckRequest</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,17 +23,13 @@
                 <span asp-validation-for="Cron" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PersonID" class="control-label"></label>
-                <select asp-for="PersonID" class ="form-control" asp-items="ViewBag.PersonID"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Добавить чекер" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад к списку чекеров</a>
 </div>
 
