--- a/RemoteChecker/Views/CheckRequests/Index.cshtml
+++ b/RemoteChecker/Views/CheckRequests/Index.cshtml
@@ -1,25 +1,28 @@
 ﻿@model IEnumerable<RemoteChecker.Models.CheckRequest>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Мои чекеры";
 }
 
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Добавить чекер</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.HostAddress)
+                Адрес хоста
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Cron)
+                CRON-выражение
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Person)
+                Активен
+            </th>
+            <th>
+                Владелец
             </th>
             <th></th>
         </tr>
@@ -34,12 +37,15 @@
                 @Html.DisplayFor(modelItem => item.Cron)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Person.ID)
+                @Html.DisplayFor(modelItem => item.Active)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Person.Login)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.ID">Удалить</a>
             </td>
         </tr>
 }
