--- a/RemoteChecker/Views/Person/Details.cshtml
+++ b/RemoteChecker/Views/Person/Details.cshtml
@@ -4,20 +4,22 @@
     ViewData["Title"] = "Список чекеров";
 }
 
-<h1>Информация о пользователе</h1>
 
+@if (User.Identity.Name == "admin")
+{
+    <h1>Список чекеров пользователя @Html.DisplayFor(model => model.Login)</h1>
+}
+else
+{
+    <h1>Список чекеров</h1>
+}
 <div>
-    @if (User.Identity.Name == "admin")
-    {
-        <h4>Логин: @Html.DisplayFor(model => model.Login)</h4>
-    }
-    else
+    @if (User.Identity.Name != "admin")
     {
         <p>
             <a asp-controller="CheckRequests" asp-action="Create">Добавить новый</a>
         </p>
     }
-    <hr />
 
     <table class="table">
         <thead>
@@ -28,31 +30,37 @@
                 <th>
                     CRON
                 </th>
+                <th>
+                    Активен
+                </th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
             @foreach (var item in Model.CheckRequests)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.HostAddress)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Cron)
-                    </td>
-                    <td>
-                        <a asp-controller="CheckRequests" asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                        <a asp-controller="CheckRequests" asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                        <a asp-controller="CheckRequests" asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-                    </td>
-                </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HostAddress)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Cron)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Active)
+                </td>
+                <td>
+                    <a asp-controller="CheckRequests" asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                    <a asp-controller="CheckRequests" asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                    <a asp-controller="CheckRequests" asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                </td>
+            </tr>
             }
         </tbody>
     </table>
 </div>
 <div>
-    @if (User.Identity.Name == "admin")
+    @if (User.Identity.Name == "admin" && Model.Role.Name != "Администратор")
     {
         <a asp-action="Delete" asp-route-id="@Model.ID">Удалить пользователя</a>
         <br />
