Needed to translate person details page too
Closes #13

--- a/RemoteChecker/Views/Person/Details.cshtml
+++ b/RemoteChecker/Views/Person/Details.cshtml
@@ -50,9 +50,9 @@ else
                     @Html.DisplayFor(modelItem => item.Active)
                 </td>
                 <td>
-                    <a asp-controller="CheckRequests" asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                    <a asp-controller="CheckRequests" asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                    <a asp-controller="CheckRequests" asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                    <a asp-controller="CheckRequests" asp-action="Edit" asp-route-id="@item.ID">Изменить</a> |
+                    <a asp-controller="CheckRequests" asp-action="Details" asp-route-id="@item.ID">Информация</a> |
+                    <a asp-controller="CheckRequests" asp-action="Delete" asp-route-id="@item.ID">Удалить</a>
                 </td>
             </tr>
             }
