--- a/RemoteChecker/Views/CheckRequests/Delete.cshtml
+++ b/RemoteChecker/Views/CheckRequests/Delete.cshtml
@@ -1,39 +1,45 @@
 ﻿@model RemoteChecker.Models.CheckRequest
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Удаление чекера";
 }
 
-<h1>Delete</h1>
+<h1>Удаление чекера</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы действительно хотите удалить этот чекер?</h3>
 <div>
-    <h4>CheckRequest</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HostAddress)
+        <dt class="col-sm-2">
+            Адрес хоста
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.HostAddress)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cron)
+        <dt class="col-sm-2">
+            CRON-выражение
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Cron)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Person)
+        <dt class="col-sm-2">
+            Активен
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Person.ID)
-        </dd class>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Active)
+        </dd>
+        <dt class="col-sm-2">
+            Владелец
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Person.Login)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Удалить чекер" class="btn btn-danger" /> 
+        <br/>
+        <a asp-action="Index">Назад к списку чекеров</a>
     </form>
 </div>
