--- a/RemoteChecker/Views/CheckRequests/Details.cshtml
+++ b/RemoteChecker/Views/CheckRequests/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model RemoteChecker.Models.CheckRequest
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Информация";
 }
 
-<h1>Details</h1>
+<h1>Информация</h1>
 
 <div>
-    <h4>CheckRequest</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -31,6 +30,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.ID">Изменить</a> |
+    <a asp-action="Index">Назад к списку чекеров</a>
 </div>
