--- a/RemoteChecker/Views/CheckRequests/Create.cshtml
+++ b/RemoteChecker/Views/CheckRequests/Create.cshtml
@@ -13,14 +13,19 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="HostAddress" class="control-label"></label>
+                <label class="control-label">Адрес хоста</label>
                 <input asp-for="HostAddress" class="form-control" />
                 <span asp-validation-for="HostAddress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Cron" class="control-label"></label>
+                <label class="control-label">CRON-выражение</label>
                 <input asp-for="Cron" class="form-control" />
                 <span asp-validation-for="Cron" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label class="control-label">Активен</label>
+                <input asp-for="Active" />
+                <span asp-validation-for="Active" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Добавить чекер" class="btn btn-primary" />
