--- a/RemoteChecker/Views/CheckRequests/Index.cshtml
+++ b/RemoteChecker/Views/CheckRequests/Index.cshtml
@@ -52,8 +52,10 @@
                         if ((bool)ViewData["admin"] && item.Person.Login == User.Identity.Name || !(bool)ViewData["admin"])
                         {
                             <a asp-action="Edit" asp-route-id="@item.ID">Изменить</a>
+                            <span>|</span>
                             <a asp-action="Details" asp-route-id="@item.ID">Информация</a>
                         }
+                        <span>|</span>
                         <a asp-action="Delete" asp-route-id="@item.ID">Удалить</a>
                     }
                 </td>
