--- a/RemoteChecker/Views/CheckRequests/Unauthorized.cshtml
+++ b/RemoteChecker/Views/CheckRequests/Unauthorized.cshtml
@@ -4,5 +4,8 @@
 
 <h1>Доступ запрещен</h1>
 
+<hr/>
 <h3>Вы попытались просмотреть информацию или совершить действие, для которого у Вас недостаточно прав</h3>
+<hr/>
+<h4>Сообщение: @ViewData["err"]</h4>
 
