Force checks now work through Worker class
Also, implemented a little bit more functionality, such as editing, removing etc.

Closes #20
Related to #22

--- a/RemoteChecker/Views/CheckRequests/Details.cshtml
+++ b/RemoteChecker/Views/CheckRequests/Details.cshtml
@@ -21,6 +21,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Cron)
         </dd>
+        <dt class="col-sm-2">
+            Статус
+        </dt>
+        <dd class="col-sm-10">
+            @(Model.Active ? "Активен" : "Неактивен")
+        </dd>
     </dl>
     <hr />
     <table class="table">
